Fix for bug 830879 (HTML Element WebIDL bindings require classinfo). r=bz.

--HG--
extra : rebase_source : a88a5f24d3d4c12b652f1228eb5b3b7bb8b9e5ee